<resources>
    <string name="app_name">CompositionGame</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="game_name">Состав числа</string>
    <string name="rules_game">Правила игры: перед вами будет три фигуры, две снизу и одна сверху, в двух из них будут числа. Необходимо, чтобы сумма чисел из двух нижних фигур была равна числу в верхней фигуре, для этого нужно вставить недостающее число.</string>
    <string name="description_game">Пример: в верхнем круге число 7, в одном из нижних знак вопроса, а в другом число 4. Значит на месте вопросительного знака должно быть число 3, потому что 3 + 4 = 7</string>
    <string name="begin">Начать</string>
    <string name="choose_level">Выберите уровень:</string>
    <string name="test_level">Тестовый</string>
    <string name="easy_level">Легкий</string>
    <string name="medium_level">Средний</string>
    <string name="hard_level">Сложный</string>
    <string name="information_about_answers">Правильных ответов: %s (минимум %s)</string>
    <string name="your_score">Ваш счёт: %s</string>
    <string name="your_score_percent">Процент правильных ответов: %s</string>
    <string name="information_about_count_right_answers">Необходимое количество правильных ответов: %s</string>
    <string name="information_about_percent_right_answers">Необходимый процент правильных ответов: %s</string>
    <string name="play_again">Играть ещё раз</string>
    <string name="symbolQuestion">"?"</string>

</resources>