<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".presentation.chooseLevelFragment.ChooseLevelFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/choose_level"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonTestLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/test_level" />

        <Button
            android:id="@+id/buttonEasyLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="#599900"
            android:text="@string/easy_level" />

        <Button
            android:id="@+id/buttonMediumLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="#FFAA00"
            android:text="@string/medium_level" />

        <Button
            android:id="@+id/buttonHardLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/hard_level" />

    </LinearLayout>

</layout>